dropdown overlapping issue fixed

--- a/src/app/components/core/settings/settings.component.css
+++ b/src/app/components/core/settings/settings.component.css
@@ -1,3 +1,6 @@
 .panel.is-mobile {
     margin-top: 10px;
 }
+
+.card { overflow: visible;}
+.card-content { overflow: visible; }
