--- a/src/styles.css
+++ b/src/styles.css
@@ -244,6 +244,3 @@ a.dropdown-item:hover {
   overflow: auto;
 }
 
-.card { overflow: visible;}
-.card-content { overflow: visible; }
-
